[gd_scene load_steps=4 format=3 uid="uid://bglvj405a8scx"]

[ext_resource type="Theme" uid="uid://cboyxbggkvdoj" path="res://Scenes/UI/Menu.tres" id="1_talt2"]
[ext_resource type="Script" path="res://Scenes/UI/settings.gd" id="2_supjv"]
[ext_resource type="PackedScene" uid="uid://cyol5v5lpw78x" path="res://Scenes/UI/setting_slider.tscn" id="3_gs1v7"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_talt2")
script = ExtResource("2_supjv")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="GridContainer" type="GridContainer" parent="PanelContainer/CenterContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Username" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_name" type="LineEdit" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Enter Name"
alignment = 1
max_length = 15

[node name="MouseSens" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Mouse Sensitivity "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingSlider" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
step = 0.01
value = 0.0
settingsVar = "sensitivity"
max = 1

[node name="AudioMaster" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Master: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingSlider2" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
step = 0.001
max = 1
is_audio = true
bus_name = "Master"

[node name="AudioMusic" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Music: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingSlider3" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
step = 0.001
max = 1
is_audio = true
bus_name = "Music"

[node name="AudioSFX" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "SFX: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingSlider4" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
step = 0.001
max = 1
is_audio = true
bus_name = "SFX"

[node name="AudioFoot" type="Label" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer"]
layout_mode = 2
text = "Footsteps: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingSlider5" parent="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer" instance=ExtResource("3_gs1v7")]
layout_mode = 2
step = 0.001
max = 1
is_audio = true
bus_name = "FootSteps"

[connection signal="text_changed" from="PanelContainer/CenterContainer/MarginContainer/GridContainer/VBoxContainer/player_name" to="." method="_on_player_name_text_changed"]
